Added debug display on town creation cmdlet

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -67,6 +67,10 @@ services:
         arguments:
             $translator: '@translator.default'
 
+    App\Command\Town\TownCreateCommand:
+        arguments:
+            $translator: '@translator.default'
+
     App\EventSubscriber\DebugSubscriber:
         tags: []
         autoconfigure: false
