Implemented St Patricks items (#684)

--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -43,4 +43,6 @@ parameters:
           desert:
             group: 'stpatrick_dig'
             chance: 0.4
+          ruins:
+            - { name: 'fair', group: 'christmas_dig_fair', chance: 0.5 }
         hooks:
