--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -97,7 +97,7 @@ parameters:
         escort:
           enabled: true
           max: 4
-        nightmode: false
+        nightmode: true
         shaman: 'normal'
         xml_feed: true
         ghoul_mode: normal
