Add easter event entry and event time calculation Add event list debug command

--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -46,6 +46,15 @@ parameters:
           ruins:
             - { name: 'fair', group: 'stpatrick_dig_fair', chance: 0.5 }
         hooks:
+    easter:
+      trigger:
+        type: easter
+        before: 4
+        after: 4
+      conf:
+        css: 'easter'
+        event_dig:
+        hooks:
     halloween:
       trigger:
         type: datetime
