--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -14,8 +14,7 @@ parameters:
           night_before: 'App\Structures\Hook::night_arma'
     afools:
       trigger:
-        #type: datetime
-        type: on
+        type: datetime
         begin: 04-01 00:00
         end: 04-02 00:00
       conf:
@@ -57,8 +56,7 @@ parameters:
             - { name: 'fair', group: 'stpatrick_dig_fair', chance: 0.5 }
     easter:
       trigger:
-        #type: easter
-        type: on
+        type: easter
         before: 4
         after: 4
       conf:
