Set time limit for non-private towns to 7 days and don't delete non-private towns with 30 or more citizens

--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -3,7 +3,8 @@ parameters:
     default:
       allow_local_conf: true
 
-      open_town_limit: 5
+      open_town_limit: 7
+      open_town_grace: 30
       lock_door_until_full: false
 
       well:       { min: 90, max: 180 }
@@ -188,6 +189,7 @@ parameters:
 
     custom:
       open_town_limit: 2
+      open_town_grace: 40
       lock_door_until_full: true
       give_all_pictos: false
       give_soulpoints: false
