--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "type": "project",
     "license": "proprietary",
+    "name": "etwin/myhordes",
+    "description": "",
     "require": {
         "php": ">=7.4",
         "ext-ctype": "*",
@@ -101,5 +103,5 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
-    }
+    },
 }
