--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
     db:
         image: mysql
-        command: ["--default-authentication-plugin=mysql_native_password"]
+        command: ["--sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION","--default-authentication-plugin=mysql_native_password"]
         ports:
             - "3306:3306"
         environment:
