Allow twinoid and et endpoints to function with arbitrary domains

--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -9,9 +9,11 @@ parameters:
     fatalmail:
       target: ~
       source: ~
+    domains: []
     twinoid:
       sk: ~
       id: ~
+      domain: ~
     etwin:
       reg: ~
       auth: ~
