--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -101,6 +101,9 @@ parameters:
         sandball_nastyness: 0.1
         massive_respawn_factor: 1
         ghoul_infection_begin: 5
+        daytime:
+          range: [7,18]
+          invert: false
 
       features:
         camping: true
