New attack scheduler (old one still works)

--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -1,6 +1,9 @@
 parameters:
   local: []
   myhordes:
+    nightly:
+      retries: 3
+      date_modifier: "tomorrow"
     coalitions:
       size: 5
     anti-grief:
