--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ before_script:
   - sudo apt-get install -y nodejs
   - npm install --global yarn
   # Install PHP extensions
-  - curl https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions -o /usr/local/bin/install-php-extensions
+  - curl -L https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions -o /usr/local/bin/install-php-extensions
   - chmod +x /usr/local/bin/install-php-extensions
   - install-php-extensions mbstring mysqli curl json intl gd xml zip bz2 opcache imap opcache readline
   # Install & enable Xdebug for code coverage reports
