--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,9 @@ before_script:
   - chmod +x /usr/local/bin/install-php-extensions
   - install-php-extensions mysqli intl gd zip bz2 imap opcache pdo-mysql
   # Install & enable Xdebug for code coverage reports
-  #- pecl install xdebug
-  #- docker-php-ext-enable xdebug
+  - pecl install xdebug
+  - docker-php-ext-enable xdebug
+  - php -m
   # Install and run Composer
   - curl -sS https://getcomposer.org/installer | php
   - php composer.phar install
