--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/PHP.gitlab-ci.yml
 
 # Select image from https://hub.docker.com/_/php/
-image: php:7.4-cli
+image: php:7.4-zts
 
 # Select what we should cache between builds
 cache:
@@ -16,8 +16,6 @@ before_script:
   - apt-get install -yqq sudo git imagemagick curl unzip
   - mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
   - sed -Ei 's/memory_limit = (.*)/memory_limit = 256M/' "$PHP_INI_DIR/php.ini"
-  - egrep 'memory_limit = ' "$PHP_INI_DIR/php.ini"
-  - php -i | grep memory_limit
   # Install Node & Yarn
   - curl -fsSL https://deb.nodesource.com/setup_14.x | sudo -E bash -
   - sudo apt-get install -y nodejs
@@ -25,7 +23,7 @@ before_script:
   # Install PHP extensions
   - curl -L https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions -o /usr/local/bin/install-php-extensions
   - chmod +x /usr/local/bin/install-php-extensions
-  - install-php-extensions mysqli intl gd zip bz2 imap opcache pdo-mysql
+  - install-php-extensions mysqli intl gd zip bz2 imap opcache pdo_mysql
   # Install & enable Xdebug for code coverage reports
   - pecl install xdebug
   - docker-php-ext-enable xdebug
