--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,9 +49,10 @@ variables:
   # MYSQL_DATABASE: myhordes
   MARIADB_ROOT_PASSWORD : MyH0rd3sD@tAbaze!
   DATABASE_URL: mysql://root:MyH0rd3sD@tAbaze!@mariadb:3306/myhordes
+  XDEBUG_MODE: coverage
 
 # Run our tests
 # If Xdebug was installed you can generate a coverage report and see code coverage metrics.
 test:
   script:
-    - vendor/bin/phpunit --configuration phpunit.xml --coverage-text --colors=never
+    - vendor/bin/phpunit --coverage-text --colors=never
