--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,9 +34,6 @@ before_script:
   - php composer.phar install
   # Install assets
   - yarn install
-  - yarn encore dev
-  # Install default DB
-  - php bin/console app:migrate -i
 
 # Bring in any services we need http://docs.gitlab.com/ee/ci/docker/using_docker_images.html#what-is-a-service
 # See http://docs.gitlab.com/ee/ci/services/README.html for examples.
@@ -51,8 +48,23 @@ variables:
   DATABASE_URL: mysql://root:MyH0rd3sD@tAbaze!@mariadb:3306/myhordes
   XDEBUG_MODE: coverage
 
+stages:
+  - build
+  - test
+  - deploy
+
+build:
+  script:
+    - yarn encore dev
+    # Install default DB
+    - php bin/console app:migrate -i
+
 # Run our tests
 # If Xdebug was installed you can generate a coverage report and see code coverage metrics.
 test:
   script:
     - vendor/bin/phpunit # --coverage-text --colors=never
+
+deploy:
+  script:
+    - echo "Nothing to do yet :("
