--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -4,6 +4,16 @@ parameters:
     nightly:
       retries: 3
       date_modifier: "tomorrow"
+    backup:
+      path: ~
+      compression: "lbzip2"
+      limits:
+        nightly: 1
+        daily: 7
+        weekly: 4
+        monthly: 12
+        update: 2
+        manual: -1
     coalitions:
       size: 5
     anti-grief:
