--- a/config/services.yaml
+++ b/config/services.yaml
@@ -50,12 +50,10 @@ services:
 
     # Some classes need the fully featured translator class instead of
     # just the interface, in order to set a locale
-    App\Command\SchedulerCommand:
-        arguments:
-            $translator: '@app.decoration.translator.inner'
     App\Command\CronCommand:
       arguments:
         $translator: '@app.decoration.translator.inner'
+        $db: '%env(url:DATABASE_URL)%'
 
     # The NightlyHandler should have it's own log channel
     App\Service\NightlyHandler:
