--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,9 +42,7 @@ build:
     # Install PHP extensions
     - curl -L https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions -o /usr/local/bin/install-php-extensions
     - chmod +x /usr/local/bin/install-php-extensions
-    - pecl install mysqli intl gd zip bz2 imap opcache pdo_mysql
-    - docker-php-ext-enable mysqli intl gd zip bz2 imap opcache pdo_mysql
-    # - install-php-extensions mysqli intl gd zip bz2 imap opcache pdo_mysql
+    - install-php-extensions intl gd zip opcache pdo_mysql
     # Install & enable Xdebug for code coverage reports
     - pecl install xdebug
     - docker-php-ext-enable xdebug
