--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -73,6 +73,7 @@ parameters:
 
       modifiers:
         watchtower_estimation_threshold: 33
+        watchtower_estimation_offset: 0
         allow_redig: false
         assemble_items_from_floor: false
         preview_item_assemblage: false
@@ -165,6 +166,7 @@ parameters:
 
       modifiers:
         watchtower_estimation_threshold: 0
+        watchtower_estimation_offset: 8
         citizen_attack:
           protection: true
         wind_distance: -1
