--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,9 +31,10 @@ security:
 
     role_hierarchy:
         ROLE_USER:  ROLE_REGISTERED
+        ROLE_ANIMAC: ROLE_USER
         ROLE_ORACLE: ROLE_USER
         ROLE_CROW:  ROLE_USER
-        ROLE_ADMIN: [ROLE_CROW, ROLE_ORACLE]
+        ROLE_ADMIN: [ROLE_CROW, ROLE_ORACLE, ROLE_ANIMAC]
         ROLE_SUPER: ROLE_ADMIN
 
     # Easy way to control access for large sections of your site
