--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -37,10 +37,10 @@ parameters:
     allow_raw_avatars: false
     soulpoints:
       limits:
-        remote: 0 # 100
-        panda: 0 # 500
-        return_small: 0 # 500
-        custom: 0 # 1000
+        remote: 100
+        panda: 500
+        return_small: 500
+        custom: 1000
     towns:
       openmin:
         remote: 1
