--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,10 +32,11 @@ security:
     role_hierarchy:
         ROLE_USER:      ROLE_REGISTERED
         ROLE_ELEVATED:  ROLE_USER
+        ROLE_TEAM:      ROLE_USER
         ROLE_ANIMAC:    ROLE_ELEVATED
         ROLE_ORACLE:    ROLE_ELEVATED
         ROLE_CROW:      ROLE_ELEVATED
-        ROLE_ADMIN:     [ROLE_CROW, ROLE_ORACLE, ROLE_ANIMAC]
+        ROLE_ADMIN:     [ROLE_CROW, ROLE_ORACLE, ROLE_ANIMAC, ROLE_TEAM]
         ROLE_SUPER:     ROLE_ADMIN
 
     # Easy way to control access for large sections of your site
