Fixes #1155 Add ruleset view to admin panel

--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -125,7 +125,7 @@ parameters:
         attacks: 'normal'
         give_all_pictos: true
         give_soulpoints: true
-        last_death: 'r_surlst_#00'
+        last_death: ['r_surlst_#00']
         survival_picto: null
 
       disabled_jobs: ['shaman']
@@ -201,7 +201,8 @@ parameters:
         ghoul_infection_begin: 2
 
       features:
-        last_death: 'r_suhard_#00'
+        last_death:
+          merge: ['r_suhard_#00']
         survival_picto: 'r_pande_#00'
 
       explorable_ruins: 2
