--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -83,7 +83,8 @@ parameters:
             chance: 0.4
     purge:
       trigger:
-        type: datetime
+        # type: datetime
+        type: off
         begin: 2021-08-25 00:00
         end: 2021-09-01 00:00
       conf:
@@ -91,4 +92,4 @@ parameters:
         hooks:
           watchtower: 'App\Structures\Hook::watchtower_purge'
           dashboard: 'App\Structures\Hook::dashboard_purge'
-          disable_citizen: 'App\Structures\Hook::citizen_purge'
+          disable_town: 'App\Structures\Hook::citizen_purge'
