Fixed ruin generation, added dama/doctrine-test-bundle to prevent tests to actually write to the db

--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "brainbox-et/etwin-api-client": "@dev"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.6",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0",
