--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "@eternal-twin/website": "^0.3.1",
+        "@eternal-twin/cli": "^0.8.3",
         "@fortawesome/fontawesome-free": "^5.14.0",
         "@symfony/webpack-encore": "^0.28.3",
         "core-js": "^3.6.5",
