--- a/config/app/myhordes.yml
+++ b/config/app/myhordes.yml
@@ -49,3 +49,8 @@ parameters:
         panda: 1
         small: 1
         custom: 0
+    soul_import:
+      enabled: true
+      readonly: false
+      limited: false
+      sp_threshold: 15
