--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -144,6 +144,8 @@ parameters:
 
       initial_buildings:  ['small_refine_#00','small_door_closed_#00','item_tagger_#00']
       unlocked_buildings: ['small_gather_#02']
+      disabled_buildings:
+        merge: ['small_novlamps_#00']
 
       distribute_items:
         replace: ['bplan_box_e_#00', 'bplan_box_#00', 'bplan_box_#00', 'bplan_box_#00', 'firework_powder_#00','firework_tube_#00','firework_box_#00']
@@ -187,6 +189,7 @@ parameters:
 
       features:
         shaman: 'none'
+        nightmode: false
       
       disabled_roles: ['shaman']
 
