--- a/config/app/rules.yml
+++ b/config/app/rules.yml
@@ -137,7 +137,11 @@ parameters:
       disabled_jobs: ['shaman']
       disabled_roles: []
       disabled_buildings: ['small_vaudoudoll_#00', 'small_bokorsword_#00', 'small_spiritmirage_#00','small_holyrain_#00']
-      
+
+      overrides:
+        item_groups:
+          empty_dig: 'empty_dig_test'
+
     small:
       map:  { min: 12, max: 14, margin: 0.25 }
       ruins: 7
