Added admin log

--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -5,15 +5,25 @@ monolog:
             action_level: error
             handler: nested
             excluded_http_codes: [403, 404, 405]
-            channels: ["!night"]
+            channels: ["!night", "!admin"]
         night:
             type: fingers_crossed
             action_level: debug
             handler: rotation_night
             channels: ["night"]
+        admin:
+            type: fingers_crossed
+            action_level: debug
+            handler: rotation_admin
+            channels: [ "admin" ]
         rotation_night:
             type: rotating_file
             path: "%kernel.logs_dir%/night/%kernel.environment%.log"
+            level: debug
+            max_files: 14
+        rotation_admin:
+            type: rotating_file
+            path: "%kernel.logs_dir%/admin/%kernel.environment%.log"
             level: debug
             max_files: 14
         nested:
