--- a/config/services.yaml
+++ b/config/services.yaml
@@ -60,6 +60,12 @@ services:
         tags:
           - { name: monolog.logger, channel: night }
 
+    # Admins controllers should have their own log channel
+    App\Controller\Admin\:
+        resource: '../src/Controller/Admin'
+        tags:
+          - { name: monolog.logger, channel: admin }
+
     App\Command\DebugCommand:
         arguments:
             $translator: '@app.decoration.translator.inner'
