--- a/config/app/events.yml
+++ b/config/app/events.yml
@@ -2,7 +2,7 @@ parameters:
   events:
     arma:
       trigger:
-        type: off
+        type: datetime
         begin: 12-04 00:00
         end: 12-05 00:00
       conf:
