Move Role Playing Texts to new fixtures package

--- a/packages/myhordes-fixtures/src/Resources/config/services.yaml
+++ b/packages/myhordes-fixtures/src/Resources/config/services.yaml
@@ -16,3 +16,5 @@ services:
 
     MyHordes\Fixtures\Service\TownDataService:
       tags: [ { name: 'myhordes.fixtures.town', priority: 0 } ]
+    MyHordes\Fixtures\Service\RolePlayTextDataService:
+      tags: [ { name: 'myhordes.fixtures.rp_texts', priority: 0 } ]
